welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:15: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return true
             ^SlugSnail:15: warning: enclosing method isFacingTrail has result type Unit: return value discarded
      return true
      ^SlugSnail:17: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return false
             ^SlugSnail:17: warning: enclosing method isFacingTrail has result type Unit: return value discarded
      return false
      ^SlugSnail:20: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return false
         ^SlugSnail:20: warning: enclosing method isFacingTrail has result type Unit: return value discarded
  return false
  ^SlugSnail:25: error: missing arguments for method isFacingTrail in class SlugSnail;
follow this method with `_' if you want to treat it as a partially applied function
  if (isFacingTrail==true) {
      ^SlugSnail:29: error: missing arguments for method isFacingTrail in class SlugSnail;
follow this method with `_' if you want to treat it as a partially applied function
  } else if (isFacingTrail==false) {
             ^