welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
def hunt(c:Color) {
    do {
    check
  } while (estSurBiscuit==false)
  prendBiscuit
}

def isFacingTrail(couleur:Color) {
  if (estFaceMur()==false) {
    avance;
    getCouleurSol;
    recule;
    if (couleur==getCouleurSol) {
      return true
    } else {
      return false
    }
  }
  return false
}


def check {
  if (isFacingTrail==true) {
    baisseBrosse;
    avance;
    leveBrosse;    
  } else if (isFacingTrail==false) {
      gauche;
  }
}